--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-chartjs-2": "^2.11.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.4.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
