--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-gauge-chart": "^0.4.1",
+    "react-helmet": "^6.1.0",
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
