--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@syncfusion/ej2-angular-schedule": "^23.1.40",
+    "@syncfusion/ej2-base": "^23.1.41",
+    "@syncfusion/ej2-buttons": "^23.1.43",
+    "@syncfusion/ej2-dropdowns": "^23.1.43",
+    "@syncfusion/ej2-inputs": "^23.1.43",
+    "@syncfusion/ej2-lists": "^23.1.43",
+    "@syncfusion/ej2-navigations": "^23.1.43",
+    "@syncfusion/ej2-popups": "^23.1.43",
+    "@syncfusion/ej2-richtexteditor": "^23.1.43",
+    "@syncfusion/ej2-splitbuttons": "^23.1.43",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,9 +23,12 @@
     "chart.js": "^2.9.4",
     "latest-version": "^7.0.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-calendar": "^4.6.1",
     "react-chartjs-2": "^2.11.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-event-calendar": "^0.3.0",
     "react-gauge-chart": "^0.4.1",
     "react-helmet": "^6.1.0",
     "react-minimal-pie-chart": "^8.4.0",
