--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^2.9.4",
     "latest-version": "^7.0.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-big-calendar": "^1.8.5",
     "react-calendar": "^4.6.1",
     "react-chartjs-2": "^2.11.2",
