--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-calendar": "^4.6.1",
     "react-chartjs-2": "^2.11.2",
     "react-circular-progressbar": "^2.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-event-calendar": "^0.3.0",
     "react-gauge-chart": "^0.4.1",
@@ -25,6 +26,7 @@
     "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
