--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-event-calendar": "^0.3.0",
     "react-gauge-chart": "^0.4.1",
     "react-google-login": "^5.2.2",
