--- a/package.json
+++ b/package.json
@@ -50,9 +50,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "root": true
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -64,5 +61,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
