--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "react-otp-input": "^3.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.2.1",
+    "react-schedule-meeting": "^4.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
+    "reactjs-popup": "^2.0.6",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
@@ -61,6 +63,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
