--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^2.11.2",
     "react-circular-progressbar": "^2.1.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-event-calendar": "^0.3.0",
