--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-schedule-meeting": "^4.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-time-picker": "^6.5.2",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.6",
     "redux": "^4.2.1",
