--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/node": "^16.11.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@uiw/codemirror-theme-vscode": "^4.21.20",
-    "@uiw/react-codemirror": "^4.21.20",
+    "@uiw/codemirror-theme-vscode": "^4.21.21",
+    "@uiw/react-codemirror": "^4.21.21",
     "ace-builds": "^1.31.2",
     "axios": "^1.6.0",
     "chart.js": "^2.9.4",
@@ -27,7 +27,6 @@
     "react-chartjs-2": "^2.11.2",
     "react-circular-progressbar": "^2.1.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-datepicker": "^4.23.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-event-calendar": "^0.3.0",
@@ -38,12 +37,9 @@
     "react-otp-input": "^3.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.2.1",
-    "react-schedule-meeting": "^4.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
-    "react-time-picker": "^6.5.2",
     "react-toastify": "^9.1.3",
-    "reactjs-popup": "^2.0.6",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
@@ -53,6 +49,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "root": true
   },
   "browserslist": {
     "production": [
