--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "react-time-picker": "^6.5.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
