--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "react-otp-input": "^3.1.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-time-picker": "^6.5.2",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "rsuite": "^5.46.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
